--- a/MovieApp/app/src/main/res/values/strings.xml
+++ b/MovieApp/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Movie App</string>
+    <string name="search">Search</string>
+    <string name="favorite">Favorite Movies</string>
+    <string name="recent">Recent Movies</string>
 </resources>
