back button bug fix + Movie card layout update

--- a/MovieApp/app/src/main/res/values-bs/strings.xml
+++ b/MovieApp/app/src/main/res/values-bs/strings.xml
@@ -4,5 +4,5 @@
     <string name="favorite">Omiljeni Filmovi</string>
     <string name="recent">Najnoviji Filmovi</string>
     <string name="switch_l">Promijeni Jezik</string>
-    <string name="switch_t">Promijeni Theme</string>
+    <string name="switch_t">Promijeni Teme</string>
 </resources>
