added no internet Toast

--- a/MovieApp/app/src/main/res/values/strings.xml
+++ b/MovieApp/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="recent">Recent Movies</string>
     <string name="switch_l">Switch Language</string>
     <string name="switch_t">Switch Theme</string>
+    <string name="offline">You are OFFLINE</string>
 </resources>
