--- a/MovieApp/app/src/main/res/values-bs/strings.xml
+++ b/MovieApp/app/src/main/res/values-bs/strings.xml
@@ -5,4 +5,5 @@
     <string name="recent">Najnoviji Filmovi</string>
     <string name="switch_l">Promijeni Jezik</string>
     <string name="switch_t">Promijeni Teme</string>
+    <string name="offline">Nema interneta</string>
 </resources>
