--- a/MovieApp/app/src/main/res/values-bs/strings.xml
+++ b/MovieApp/app/src/main/res/values-bs/strings.xml
@@ -6,4 +6,5 @@
     <string name="switch_l">Promijeni Jezik</string>
     <string name="switch_t">Promijeni Teme</string>
     <string name="offline">Nema interneta</string>
+    <string name="visit">Posjetite IMDb</string>
 </resources>
