--- a/MovieApp/app/src/main/res/values/strings.xml
+++ b/MovieApp/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="switch_l">Switch Language</string>
     <string name="switch_t">Switch Theme</string>
     <string name="offline">You are OFFLINE</string>
+    <string name="visit">Visit IMDb</string>
 </resources>
