--- a/MovieApp/app/src/main/res/values/strings.xml
+++ b/MovieApp/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="switch_t">Switch Theme</string>
     <string name="offline">You are OFFLINE</string>
     <string name="visit">Visit IMDb</string>
+    //OVO jE TESTNI COMMIT
 </resources>
